--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -140,7 +140,7 @@
   <string name="ConversationItem_pending">  In afwachting</string>
   <!--ConversationActivity-->
   <string name="ConversationActivity_reset_secure_session_question">Beveiligde sessie opnieuw instellen?</string>
-  <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">Dit kan mogelijk helpen wanneer je versleutelingsproblemen hebt met dit gesprek. Je berichten blijven behouden.</string>
+  <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">Dit kan helpen wanneer je versleutelingsproblemen hebt met dit gesprek. Je berichten blijven behouden.</string>
   <string name="ConversationActivity_reset">Opnieuw instellen</string>
   <string name="ConversationActivity_add_attachment">Bijlage toevoegen</string>
   <string name="ConversationActivity_select_contact_info">Selecteer contactinformatie</string>
@@ -259,7 +259,7 @@
   <!--ConversationListItemAction-->
   <string name="ConversationListItemAction_archived_conversations_d">Gearchiveerde gesprekken (%d)</string>
   <!--ConversationTitleView-->
-  <string name="ConversationTitleView_verified">Verified</string>
+  <string name="ConversationTitleView_verified">Geverifieerd</string>
   <!--CreateProfileActivity-->
   <string name="CreateProfileActivity_your_profile_info">Jouw profielinformatie</string>
   <string name="CreateProfileActivity_error_setting_profile_photo">Fout bij instellen van profielfoto</string>
@@ -1020,7 +1020,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="unknown_sender_view__add_to_contacts">TOEVOEGEN AAN CONTACTEN</string>
   <string name="unknown_sender_view__don_t_add_but_make_my_profile_visible">NIET TOEVOEGEN, MAAR MIJN PROFIEL WEL ZICHTBAAR MAKEN</string>
   <!--verify_display_fragment-->
-  <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Als je de veiligheid van je eind-tot-eind-versleuteling met %s wilt verifiëren, vergelijk dan de bovenstaande nummers met de nummers op het apparaat van je gesprekspartner. Je kunt ook de code op hun telefoon scannen, of hen vragen jouw code te scannen. <a href="https://signal.org/redirect/safety-numbers">Leer meer hierover.</a>]]></string>
+  <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Als je de veiligheid van je eind-tot-eind-versleuteling met %s wilt verifiëren, vergelijk dan het bovenstaande nummer met het nummer op het apparaat van je gesprekspartner. Je kunt ook de QR-code op zijn telefoon scannen, of hem vragen jouw QR-code te scannen. <a href="https://signal.org/redirect/safety-numbers">Leer meer hierover.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Tik om te scannen</string>
   <string name="verify_display_fragment__loading">Bezig met laden…</string>
   <string name="verify_display_fragment__verified">Ik heb deze contactpersoon geverifieerd</string>
